--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Diego Ramirez, Daniel Kim, Jeffery Busold, Daniel Baton",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
