--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "seed" : "node seed.js"
   },
   "author": "Diego Ramirez, Daniel Kim, Jeffery Busold, Daniel Baton",
   "license": "ISC",
