--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
-    "seed" : "node seed.js"
+    "seed": "node seed.js"
   },
   "author": "Diego Ramirez, Daniel Kim, Jeffery Busold, Daniel Baton",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
+    "handlebars": "^4.7.8",
     "is-url": "^1.2.4",
     "mongodb": "^6.3.0",
     "xss": "^1.0.14"
